save check, announcements cleanup

--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -49,9 +49,9 @@
                 <a title="Generate a read-only preview of the assignment in the format it will be provided to students"
                    class="no-decoration" id="preview_link" href="{% url 'assignment_preview_id' '0' %}">
                     {# 0 is placeholder , will be overwritten on page load #}
-                    <button type='button' class="btn make_announcement_button">Preview HomeWork</button>
+                    <button type='button' class="btn hwcentral_action_button">Preview HomeWork</button>
                 </a>
-                <input id='submit_button' class='btn make_announcement_button margin-left-neg-10 no-decoration'
+                <input id='submit_button' class='btn hwcentral_action_button margin-left-neg-10 no-decoration'
                        type='submit' value='Set The Assignment'
                        title="Assign the selected question set to the selected subjectroom"/>
             </form>
