--- a/core/templates/authenticated/submission_id/uncorrected.html
+++ b/core/templates/authenticated/submission_id/uncorrected.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block submission_id_js %}
-    <script type="text/javascript" src="{% static 'js/math_toolbox.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/unsaved_checker.js' %}"></script>
 {% endblock submission_id_js %}
 
 {% block submission_info %}
