--- a/core/templates/authenticated/widgets/math_toolbox.html
+++ b/core/templates/authenticated/widgets/math_toolbox.html
@@ -1,7 +1,6 @@
 {% load staticfiles %}
 
-<!-- To include this toolbox, include the widget, the js file, the css file and on every textbox which needs it enabled add class='math_toolbox_enabled' -->
-
+{# To include this toolbox, include the widget, the js file, the css file and on every textbox which needs it enabled add class='math_toolbox_enabled' #}
 
 <button type="button" class='btn btn-default toolbox_button'>Math Toolbox</button>
 
