--- a/core/static/css/authenticated_base.css
+++ b/core/static/css/authenticated_base.css
@@ -185,13 +185,13 @@ a{
     color:#000;
 }
 
-.make_announcement_button{
+.hwcentral_action_button {
     margin-left:-17px;
     background-color:#008B8B !important;
     color:#fff !important;
 }
 
-.make_announcement_button:hover{
+.hwcentral_action_button:hover {
     color:#fff;
 }
 
