--- a/core/templates/authenticated/widgets/announcement_create.html
+++ b/core/templates/authenticated/widgets/announcement_create.html
@@ -1,3 +1,3 @@
 <a title="Click here to make an announcement" class="no-decoration margin-left-neg-10" href="{% url 'announcement' %}">
-    <button class="btn make_announcement_button">Make an Announcement</button>
+    <button class="btn hwcentral_action_button">Make an Announcement</button>
 </a>
