--- a/core/templates/authenticated/widgets/assignment_create.html
+++ b/core/templates/authenticated/widgets/assignment_create.html
@@ -1,3 +1,3 @@
 <a title="Click here to create a new homework assignment" class="no-decoration" href="{% url 'assignment' %}">
-    <button class="btn make_announcement_button">Assign HomeWork</button>
+    <button class="btn hwcentral_action_button">Assign HomeWork</button>
 </a>
