--- a/core/static/css/password_strength.css
+++ b/core/static/css/password_strength.css
@@ -42,8 +42,8 @@
 .password-btn{
     background-color:#008B8B;
     border-radius:4px;
-    box-shadow: 0px 0px 0px #000 !important;
-    padding:10px !important;
-    color:#fff !important;
-    font-size:16px !important;
+    box-shadow: 0px 0px 0px #000 ;
+    padding:10px ;
+    color:#fff ;
+    font-size:16px ;
 }
