docker setup complete for circleci

--- a/core/templates/activation/email_body.html
+++ b/core/templates/activation/email_body.html
@@ -1,6 +1,6 @@
 Welcome to {{ site_name }}!
 
-Your account has been successfully set up. Your username is: {{ user.get_username }}
+Your account has been successfully set up. Your username is: <b>{{ user.get_username }}</b>
 
 Please click on the link below to activate your account and set your password:
 
