video update email

--- a/core/templates/activation/text_body.html
+++ b/core/templates/activation/text_body.html
@@ -6,9 +6,9 @@ Please click on the link below to activate your account and set your password:
 
 {{ protocol}}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
 
-The student is required to stay back on Monday (2 November 2015) to attend the demo session where they will be guided on how to use HomeWork Central.
+For additional reference, please watch the video tutorial by clicking on the following link:
 
-For additional reference, an email containing a video tutorial will also be sent to you shortly.
+https://www.youtube.com/watch?v=nAgfTNpSnIs
 
 Feel free to reach out to us at +91 7057216343 or contact@hwcentral.in for any enquiries/feedback!
 
