--- a/core/templates/activation/html_body.html
+++ b/core/templates/activation/html_body.html
@@ -8,10 +8,9 @@
     {{ protocol }}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
 </div>
 
-<p>The student is required to stay back on <b>Monday (2 November 2015)</b> to attend the demo session where they will be
-    guided on how to use {{ site_name }}.</p>
+<p>For additional reference, please watch the video tutorial by clicking on the link below:</p>
 
-<h3>For additional reference, an email containing a video tutorial will also be sent to you shortly.</h3>
+<a href="https://www.youtube.com/watch?v=nAgfTNpSnIs">VIDEO TUTORIAL</a>
 
 <p>Feel free to reach out to us at +91 7057216343 or contact@hwcentral.in for any enquiries/feedback!</p>
 
