New Landing Page

--- a/hwcentral/templates/enquirer_form.html
+++ b/hwcentral/templates/enquirer_form.html
@@ -7,5 +7,5 @@
             {{ field.errors }}
         </div>
     {% endfor %}
-    <input id="enquiry_submit_button" type="submit" name="SUBMIT" value="SUBMIT" title="Submit your contact details"/>
+    <input id="enquiry_submit_button" type="submit" name="SUBMIT" value="SEND ME THE INFORMATION!" title="Submit your contact details"/>
 </form>
