--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -3,6 +3,43 @@
     color:#000;
 }
 
+#indexpenguin{
+    width:240px;
+    margin-top:-20px;
+    float:left;
+}
+
+#div3img{
+        position: absolute;
+        top:50px;
+        left:150px;
+        width:700px;
+    }
+
+#subsection1_1 h1{
+    margin-left:290px;
+    font-size:39px;
+}
+
+#subsection1_1 p{
+    margin-left:290px;
+    font-size:29px;
+}
+
+#small_vid{
+    display:none;
+}
+
+#reg_vid{
+    display:none;
+}
+
+#subsection1_2{
+    position:absolute;
+    right:60px;
+    top:280px;
+}
+
 img {
 	width: inherit;
 }
@@ -83,7 +120,7 @@ input{
     line-height:30px;
     padding:5px;
     width:400px;
-    font-size: 24px;
+    font-size: 19px;
     margin-top: 10px;
     font-weight:100;
 }
@@ -92,7 +129,6 @@ input{
     background-color: rgba(0, 0, 0, 0.9); 
     color:#fff; 
     position:absolute; 
-    top:40px; 
     right:50px; 
     width:700px; 
     padding:40px; 
@@ -156,14 +192,15 @@ input{
     margin-top:5px; 
     position:relative; 
     overflow: hidden; 
-    background-image:url('blue_texture.png');
+    background-color:#008B8B;
+    //background-image:url('blue_texture.png');
 }
 
 #horizontaldiv3{
     margin-top:5px; 
     position:relative; 
     overflow: hidden; 
-    max-height:850px;
+    height:760px;
 }
 
 #horizontaldiv4{
@@ -179,19 +216,20 @@ input{
 }
 
 #horizontaldiv5{
-    background-image:url('blue_texture.png'); 
+    background-color:#000;
+    color:#e6e6e6;
     margin-top:5px; 
     position:relative; 
     overflow: hidden; 
     text-align:center; 
     font-family: 'Proxima Nova', sans-serif; 
     padding:40px; 
-    font-size:30px;
+    font-size:22px;
 }
 
 #horizontaldiv5 a{
     text-decoration:none;
-    color:#000;
+    color:#e6e6e6;
 }
 
 #horizontaldiv5 a:hover{
@@ -273,11 +311,54 @@ input{
     padding-right: 0px;
 }
 
+
+@media screen and (max-width: 1650px){
+    #div3img{;
+        top:100px;
+        left:80px;
+        width:600px;
+    }
+}
+
+
+@media screen and (max-width: 1570px){
+    #reg_vid{
+        display:inline;
+    }
+
+    #large_vid{
+        display:none;
+    }
+
+    #subsection1_2 {
+        top:350px;
+    }
+
+}
+
 @media screen and (max-width: 1470px){
     #index_section2{
         top:0px;
         right:0px;
         height:100%;
+    }
+
+   #subsection1_1 p{
+        font-size:29px;
+    }
+
+    #subsection1_1 h1{
+        font-size:34px;
+    }
+
+    #indexpenguin{
+    margin-top:-10px;
+    }
+
+    #div3img{;
+        top:100px;
+        left:30px;
+        width:600px;
     }
 }
 
@@ -313,9 +394,30 @@ input{
     }
 
     #div3img{
-        position: absolute;
-        top:0px;
-        left:0px;
+        display:none;
+    }
+
+    #indexpenguin{
+    display:none;
+    }
+
+   #subsection1_1 p{
+        font-size:24px;
+        margin-left:0px;
+    }
+
+    #subsection1_1 h1{
+        font-size:34px;
+        margin-left:0px;
+    }
+
+    #subsection1_2{
+    position:static;
+    margin-top:30px;
+    }
+
+    #index_section1 ul{
+        margin-top:20px;
     }
 
 }
@@ -394,6 +496,14 @@ input{
         height: auto;
     }
 
+    #reg_vid{
+        display:none;
+    }
+
+    #small_vid{
+        display:inline;
+    }
+
     #landingbuttons{
         margin-top:-175px; 
         margin-left:0px; 
@@ -432,7 +542,7 @@ input{
     }
 
     #index_section1{
-        font-size:20px;
+        font-size:24px;
     }
 
     .bullet_img img{
@@ -455,6 +565,14 @@ input{
         font-size:25px;
     }
 
+    #index_section1{
+        font-size:20px;
+    }
+
+    #small_vid{
+        display:none;
+    }
+
     #index_section2 li{
         font-size:16px;
     }
@@ -463,7 +581,7 @@ input{
         line-height:30px;
         padding:5px;
         width:250px;
-        font-size: 24px;
+        font-size: 16px;
         margin-top: 10px;
     }
 
