--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -99,31 +99,41 @@
         <a name="info"></a>
         <div id="horizontaldiv2">
             <div id="index_section1">
-                We provide school teachers with an intuitive interface to assign homework to their students online. Our platform automatically corrects the answers and provides school administrators, teachers and parents with in-depth analytics to improve educational outcomes in the classroom. 
+                <div id="subsection1_1">
+                    <img id="indexpenguin" src="{% static 'img/index/ebook-penguin.png' %}">
+                    <h1>HOMEWORK FOR THE 21<sup>ST</sup> CENTURY</h1>
+                    <p>Homework Central provides teachers with an online platform to assign, evaluate and analyse student homework. Automated correction and in-depth analytics allow teachers to improve subject retention and learning outcomes in the classroom.</p> 
+                    <div style="clear:both;"></div>
+                </div>
+                <div id="subsection1_2">
+                    <iframe id="reg_vid" width="640" height="360" src="https://www.youtube.com/embed/nAgfTNpSnIs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe id="small_vid" width="560" height="315" src="https://www.youtube.com/embed/nAgfTNpSnIs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe id="large_vid" width="853" height="480" src="https://www.youtube.com/embed/nAgfTNpSnIs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                </div>
                 <ul>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">High quality question banks based on the Indian curriculum</span>
+                    <span class="bullet_text">Personalised Questions for Students</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Personalised and targeted questions</span>
+                    <span class="bullet_text">Automated Correction and Statistical Review</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Easy to use, simple interface</span>
+                    <span class="bullet_text">Advanced Analytics for Teachers and Schools</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Automatic correction and statistical review</span>
+                    <span class="bullet_text">High Quality Question Banks</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Advanced analytics for teachers, parents and schools</span>
+                    <span class="bullet_text">Focus on the Indian Curriculum</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Practice assignments available 24 X 7 </span>
+                    <span class="bullet_text">Analysis Reports for Parents</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
@@ -131,31 +141,30 @@
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Class announcements and messaging interface</span>
+                    <span class="bullet_text">Multi-type Question Support</span>
                     </li>
                     <li>
                     <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Multiple question types - MCQs, Numericals, Textuals and Conditionals</span>
+                    <span class="bullet_text">Multiple Subject Support</span>
                     </li>
                     <li>
-                    <span class="bullet_img"><img class="indextick" src="{% static 'img/index/black_tick.png' %}"></span>
-                    <span class="bullet_text">Multiple subject support - Maths, Science, Social Science, English</span>
+                    <span class="bullet_text">... and a lot more!</span>
                     </li>
                 </ul>
             </div>    
         </div>
 
         <div id="horizontaldiv3">
-        <img id="div3img" style="width:100%;" src="{% static 'img/index/indexone.jpg' %}">
+        <img id="div3img" src="{% static 'img/index/crafty-penguin.png' %}">
             <div id="index_section2">
-                <h1>WHY IS HOMEWORK CENTRAL THE RIGHT SOLUTION?</h1>
+                <h1>HOMEWORK CENTRAL IS THE TOOL YOU NEED</h1>
                 <ul>
-                    <li>Teachers spend over 30% of their time correcting homework from notebooks</li>
-                    <li>Over 90% of teachers say that homework correction is repetitive </li>
-                    <li>Teachers agree that performance analytics would help identify student strengths and weaknesses </li>
-                    <li>Over 80% of students admit to copying homework from notebooks</li>
-                    <li>84% of parents say they would prefer to receive more regular reports on student progress</li>
-                    <li>Administrators agree detailed analytics would help evaluate and compare teaching methods </li>
+                    <li>Automated correction means no more repetitive, time consuming correction.</li>
+                    <li>Advanced analytics identify student strengths and weaknesses - with detailed insights using our CACT methodology.</li>
+                    <li>High quality questions target specific learning outcomes</li>
+                    <li>Statistical tools track class performance and raise red flags immediately.</li>
+                    <li>Personalised questions and plagiarism detection prevent student copying</li>
+                    <li>Auto-generated report cards and a dedicated parent interface facilitate parent-school interaction.</li>
                 </ul>
             </div>   
         </div>
@@ -168,8 +177,7 @@
 
         <a name="info"></a>
         <div id="horizontaldiv5">
-            Email us at <a title="Click here to email us!" href="mailto:contact@hwcentral.in" target="_top">contact@hwcentral.in</a>
-            or call us at <a title="Click here to call us!" href="tel:+919922498624">+91 9922498624</a>
+            <a title="Click here to email us!" href="mailto:contact@hwcentral.in" target="_top">contact@hwcentral.in</a> | <a title="Click here to call us!" href="tel:+919922498624">+91 9922498624</a>
             <div style="font-size:20px; margin-top:20px;">
                   © 2015 Homework Central
             </div>  
