test suite ul styling removed for mcq options bugfixes

--- a/core/static/css/submission_id.css
+++ b/core/static/css/submission_id.css
@@ -212,3 +212,8 @@ li{
 .question_subpart_field .fieldWrapper .chosen-container li.disabled-result {
     color: #666;
 }
+
+.question_subpart_field .fieldWrapper ul {
+    /* remove list styling for mcsaq and mcmaq options which are rendered as ul li */
+    list-style: none;
+}
