--- a/hwcentral/templates/root.html
+++ b/hwcentral/templates/root.html
@@ -10,7 +10,7 @@
     <title>HW Central - {% block title %}{% endblock title %}</title>
 
     <!-- Meta -->
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block meta %}{% endblock meta %}
 
     <!-- Favicon -->
