--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -23,6 +23,10 @@
     margin-top:35px;
 }
 
+#iframe-vid{
+    margin-left:-1px;
+}
+
 img {
 	width: inherit;
 }
@@ -398,6 +402,12 @@ input{
 
 }
 
+@media screen and (max-width: 1200px){
+    .vid-holder{
+        margin-top:10px;
+    }
+}
+
 
 @media screen and (max-width: 1050px){
 
@@ -559,6 +569,26 @@ input{
         font-size:16px;
     }
 
+    .learn_arrow{
+        display:none;
+    }
+
+    .login_arrow{
+        display:none;
+    }
+
+    #learnmorebutton{
+        display:none;
+    }
+
+    #hwcentraltag{
+        display:none;
+    }
+
+    #horizontaldiv1{
+        height:520px;
+    }
+
     input{
         line-height:30px;
         padding:5px;
@@ -602,7 +632,7 @@ input{
     }
 
     #horizontaldiv1{
-        height:390px;
+        height:370px;
     }
 
     #hwcentraltitle{
@@ -630,11 +660,6 @@ input{
         margin-left:15px;
     }
 
-    #learnmorebutton{
-        margin-left:0px;
-        padding:10px;
-    }
-
     #loginbutton{
         margin-left:0px;
         padding:10px;
@@ -642,13 +667,10 @@ input{
 
 }
 
-@media screen and (max-width: 415px){
-    #horizontaldiv1{
-        height:480px;
-    }
+@media screen and (max-width: 375px){
 
-    #learnmorebutton{
-        margin-top:35px;
+    #loginbutton{
+        margin-top:25px;
     }
 
 }
