--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -105,7 +105,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-lg-push-6 vid-holder">
                         <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/nAgfTNpSnIs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                        <iframe id="iframe-vid" class="embed-responsive-item" src="https://www.youtube.com/embed/kV6JpsKUfLo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="col-lg-6 col-lg-pull-6">
