--- a/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
+++ b/core/templates/authenticated/charts/subjectroom_performance_breakdown.html
@@ -9,6 +9,7 @@
             </ul>
         </div>
         <div id="subjectroombargraph">
+            {% include "authenticated/charts/chart_loader.html" only %}
         </div>
     </div>
 </div>
