--- a/core/templates/authenticated/submission_id/base.html
+++ b/core/templates/authenticated/submission_id/base.html
@@ -63,6 +63,6 @@
                 {% block submit_button %}{% endblock submit_button %}
             </form>
         {% endwith %}
-        <a id="charm-top" class="charm" title="Go To Top"></a>
+        <a id="charm-top" class="charm" title="Go To Top"><span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span></a>
     </div>
 {% endblock authenticated_body %}
