--- a/core/templates/authenticated/sidebar/parent.html
+++ b/core/templates/authenticated/sidebar/parent.html
@@ -1,11 +1,12 @@
 {% extends "authenticated/sidebar/base.html" %}
 {% block sidebar_content %}
-     <h6 class='sidebarheader header5'> Children </h6>
-    {% for child_sidebar in sidebar.child_sidebars %}
+    {% for child_info, child_sidebar in sidebar.child_sidebars %}
         <div class="parent_child_sub_sidebar">
-            {% include "authenticated/sidebar/parent_child_sub_sidebar.html"  with sub_sidebar=child_sidebar only %}
+            <div class="parent_child_info">
+                {% include "authenticated/sidebar/parent_childinfo.html" with child_info=child_info only %}
+            </div>
+            {% include "authenticated/sidebar/parent_child_sub_sidebar.html"  with sub_sidebar=child_sidebar child_id=child_info.user_id only %}
         </div>
     {% endfor %}
 {% endblock sidebar_content %}
-{% block sidebar_listings %}
-{% endblock sidebar_listings %}
+{% block sidebar_listings %}{% endblock sidebar_listings %}
