--- a/core/templates/authenticated/sidebar/parent_childinfo.html
+++ b/core/templates/authenticated/sidebar/parent_childinfo.html
@@ -1,3 +1,3 @@
 <h6 class='sidebarheader parent_child_info_header'> {{ child_info.name }} </h6>
-<div class="userinfo_element">{{ child_info.classroom }}</div>
-<div class='hidden userinfo_element child_id'>{{ child_info.user_id }}</div>
+<div>{{ child_info.classroom }}</div>
+<div class='hidden child_id'>{{ child_info.user_id }}</div>
