--- a/hwcentral/templates/user_context_box.html
+++ b/hwcentral/templates/user_context_box.html
@@ -1,7 +1,6 @@
 {% if user.is_authenticated %}
 	<ul class='navbar-right nav navbar-nav listoptions'>
-        <li><a title="View your settings" href="{% url 'settings' %}">Settings</a></li>
-        <li><a title="Log Out" class="indented_body_right" href="{% url 'logout' %}">Log Out </a></li>
+        {% include 'authenticated/userinfo.html' with userinfo=vm.authenticated_body.userinfo only %}
     </ul>
 {% else %}
     {% include 'login_button.html' only %}
