--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -2,9 +2,9 @@
 {% load staticfiles %}
 {% block title %} Password Reset {% endblock title %}
 
-{% block authenticated_body_css %}
+{% block authenticated_base_css %}
     <link rel="stylesheet" href="{% static "css/password_strength.css" %}" type="text/css"/>
-{% endblock authenticated_body_css %}
+{% endblock authenticated_base_css %}
 
 
 
@@ -33,8 +33,8 @@
     </div>
 {% endblock authenticated_body %}
 
-{% block authenticated_body_js %}
+{% block authenticated_base_js %}
     <script type="text/javascript" src="{% static "js/password_strength.js" %}"></script> 
-{% endblock authenticated_body_js %}
+{% endblock authenticated_base_js %}
 
 
