--- a/hwcentral/templates/user_context_box.html
+++ b/hwcentral/templates/user_context_box.html
@@ -1,6 +1,6 @@
 {% if user.is_authenticated %}
 	<ul class='navbar-right nav navbar-nav listoptions'>
-        {% include 'authenticated/userinfo.html' with userinfo=vm.authenticated_body.userinfo only %}
+        {% include 'authenticated/userinfo.html' with userinfo=vm.userinfo only %}
     </ul>
 {% else %}
     {% include 'login_button.html' only %}
