--- a/core/templates/authenticated/announcement.html
+++ b/core/templates/authenticated/announcement.html
@@ -1,9 +1,9 @@
 {% extends "authenticated/base.html" %}
 {% load staticfiles %}
 {% block title %} Create Annoucement {% endblock title %}
-{% block authenticated_body_css %}
+{% block authenticated_base_css %}
     <link rel="stylesheet" href="{% static "css/announcement.css" %}" type="text/css"/>
-{% endblock authenticated_body_css %}
+{% endblock authenticated_base_css %}
 
 {% block authenticated_body %}
     <h5 class="well row topheader header5">Make an Announcement</h5>
