--- a/core/templates/authenticated/classroom_id.html
+++ b/core/templates/authenticated/classroom_id.html
@@ -1,15 +1,14 @@
 {% extends "authenticated/base.html" %}
 {% block title %} {{ vm.authenticated_body.classroom_label }} {% endblock title %}
 {% load staticfiles %}
-{% block authenticated_body_css %}
-    {% block classroom_css %} {% endblock classroom_css %}
-{% endblock authenticated_body_css %}
+{% block authenticated_base_css %}
+    {% block classroom_id_css %} {% endblock classroom_id_css %}
+{% endblock authenticated_base_css %}
 
 
 {% block authenticated_body %}
     <h5 class="topheader row well header5">{{ vm.authenticated_body.classroom_label }} : {{ vm.authenticated_body.classteacher_label }}</h5>
     <div style="margin-top:-30px;"></div>
-    {% include "authenticated/widgets/announcements_table.html" with announcements=vm.authenticated_body.announcements only %}
     {% include "authenticated/widgets/classroom_performance.html" only %}
     <div id='classroom_id' class='hidden'> {{ vm.authenticated_body.classroom_id }}</div>
     <div id='classteacher_id' class='hidden'> {{ vm.authenticated_body.classteacher_id }}</div>
@@ -27,14 +26,14 @@
 
 
 
-{% block authenticated_body_js %}
+{% block authenticated_base_js %}
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="{% static 'js/charts/classroom_performance_breakdown.js' %}"></script>
     <script type="text/javascript" src="{% static "js/charts/subjectroom_assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/standard_assignment_performance.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/student_performance_breakdown.js" %}"></script>
     <script type="text/javascript" src="{% static "js/charts/student_performance_report.js" %}"></script>
-    {% block classroom_js %}{% endblock classroom_js %}
+    {% block classroom_id_js %}{% endblock classroom_id_js %}
     <script type="text/javascript" src="{% static 'js/charts/graph_lib.js' %}"></script> 
     
-{% endblock authenticated_body_js %}
+{% endblock authenticated_base_js %}
