--- a/core/templates/authenticated/userinfo.html
+++ b/core/templates/authenticated/userinfo.html
@@ -1,11 +1,14 @@
-
-
 <li>
-    <a title="Check recent announcements">
-        <span class="glyphicon glyphicon-comment" aria-hidden="true">
-            <span class="badge">{% userinfo.announcement_count %}</span>
-        </span>
-    </a>
+    <div class="dropdown"></div>
+        <a id="announcements_button" title="Check recent announcements" class="dropdown-toggle" data-toggle="dropdown">
+            <span class="glyphicon glyphicon-comment" aria-hidden="true">
+                <span class="badge">{{ userinfo.announcement_count }}</span>
+            </span>
+        </a>
+        <ul id="announcements_container" class="dropdown-menu">
+            <li>{% include 'authenticated/charts/chart_loader.html' only %}</li>
+        </ul>
+    </div>
 </li>
 <li>
     <a title="View your settings" href="{% url 'settings' %}">
